# pix-portal

./: .dockerignore  .gitignore  Caddyfile  README.md  backend.md  compose.roptimios.yaml  compose.yaml  docker-compose.yaml  grafana-default-dashboard.json  init-letsencrypt.sh  local.conf  loki-local-config.yaml  nginx.conf  openapi.yaml  requests.http  up.sh
backend/: .dockerignore  .env  Caddyfile  Dockerfile  compose.yaml  config.py  database.py  docker-compose.yml  http-client.env.json  init.py  local.env  loki-local-config.yaml  main.py  mongo_db.py  otel-collector-config.yaml  prod.env  pyproject.toml  requests-assets.http  requests-files.http  requests-processing-requests.http  requests-users.http
backend/api-server/: Dockerfile  README.md  pyproject.toml  run.dev.sh  test_requests.http
backend/api-server/alembic/: env.py
backend/api-server/alembic/versions/: 1d986418089e_initial_revision.py
backend/api-server/api_server/: app.py  settings.py
backend/api-server/api_server/assets/: controller.py  repository.py  schemas.py  service.py
backend/api-server/api_server/files/: blobs_controller.py  files_controller.py  service.py
backend/api-server/api_server/processing_requests/: controller.py  model.py  repository.py  service.py
backend/api-server/api_server/projects/: controller.py  service.py
backend/api-server/api_server/users/: create_user.py  users.py  users_controller.py
backend/api-server/api_server/utils/: utils.py
backend/app/__tmp/: config.py  database.py
backend/app/auth/: decrypt.py
backend/app/database/: config.py  database.py  init.py
backend/app/helpers/: generators.py  register_zitadel_user.py
backend/app/models/: models.py
backend/app/routers/: file.py  project.py  user.py
backend/helpers/: password_gen.py
backend/lib/: README.md  build_and_copy_lib_to_services.sh  build_and_update.sh  pyproject.toml  requirements.txt  update_services_deps.sh
backend/lib/pix_portal_lib/: __init__.py  open_telemetry_utils.py  utils.py
backend/lib/pix_portal_lib/database/: helpers.py  migration.py
backend/lib/pix_portal_lib/events/: lifecycle_events.py
backend/lib/pix_portal_lib/exceptions/: fastapi_handlers.py  http_exceptions.py
backend/lib/pix_portal_lib/kafka_clients/: email_producer.py
backend/lib/pix_portal_lib/middleware/: request_logging.py
backend/lib/pix_portal_lib/persistence/: alembic.py  sqlalchemy.py
backend/lib/pix_portal_lib/service_clients/: asset.py  asset_fastapi_utils.py  auth.py  auth_fastapi_utils.py  fastapi.py  file.py  processing_request.py  project.py  project_fastapi_utils.py  self_authenticating_client.py  user.py  user_fastapi_utils.py  utils.py
backend/lib/pix_portal_lib/services/: asset.py  asset_fastapi_utils.py  auth.py  auth_fastapi_utils.py  file.py  file_fastapi_utils.py  processing_request.py  project.py  project_fastapi_utils.py  self_authenticating_service.py
backend/models/: models.py
backend/scripts/http-requests/: PurchasingExample.bpmn  PurchasingExampleSimulationModel.json  column_mapping_kronos.json  configuration_prosimos.yml  http-client.env.json  requests-assets.http  requests-files.http  requests-processing-requests.http  requests-projects.http  requests-users.http  submit-kronos-processing-request.http  submit-processing-request.http  submit-prosimos-processing-request.http  submit-simod-processing-request.http  test-asset-removal.http
backend/services/: compose.yaml  http-client.env.json  otel-collector-config.yaml  test_requests.http
backend/services/api-server/: .dockerignore  pyproject.toml  requirements.txt  test_requests.http
backend/services/api-server/alembic/: env.py
backend/services/api-server/api_server/: app.py  settings.py
backend/services/assets/: .env  Dockerfile  README.md  pyproject.toml  requirements.txt  test_requests.http
backend/services/assets/alembic/: env.py
backend/services/assets/assets/: app.py  settings.py
backend/services/assets/lib/: pix_portal_lib-0.1.0-py3-none-any.whl  pix_portal_lib-0.1.21-py3-none-any.whl  pix_portal_lib-0.1.33-py3-none-any.whl  pix_portal_lib-0.1.8-py3-none-any.whl  pix_portal_lib-0.1.9-py3-none-any.whl
backend/services/files/: .env  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
backend/services/files/alembic/: env.py
backend/services/files/files/: app.py  settings.py
backend/services/files/lib/: pix_portal_lib-0.1.1-py3-none-any.whl
backend/services/kronos/: .env  Dockerfile  pyproject.toml
backend/services/kronos/kronos/: app.py
backend/services/processing-requests/: .env  Dockerfile  http-client.env.json  pyproject.toml  requirements.txt  test_requests.http
backend/services/processing-requests/alembic/: env.py
backend/services/processing-requests/lib/: pix_portal_lib-0.1.1-py3-none-any.whl  pix_portal_lib-0.1.24-py3-none-any.whl  pix_portal_lib-0.1.4-py3-none-any.whl  pix_portal_lib-0.1.6-py3-none-any.whl
backend/services/projects/: .env  Dockerfile  pyproject.toml  requirements.txt  test_requests.http
backend/services/users/: .env  Dockerfile  compose.yaml  pyproject.toml  requirements.txt
backend/services/users/users/: app.py  (+6 more)
backend/src/__tmp/: database.py
backend/src/auth/: decrypt.py
backend/src/database/: config.py  database.py  init.py
backend/src/disk_storage/: filestore.py
backend/src/helpers/: register_zitadel_user.py
backend/src/models/: models.py
backend/src/routers/: file.py  project.py  user.py
backend/src/schemas/: schemas.py
backend/workers/bps-discovery-simod/: .env  Dockerfile  pyproject.toml  requirements.txt
backend/workers/kronos/: .env  Dockerfile  pyproject.toml
backend/workers/mail/: .dockerignore  .env  .gitignore  Dockerfile  pyproject.toml
backend/workers/mailserver/: Dockerfile  README.md  postfix_main.cf
backend/workers/optimos/: .gitignore  Dockerfile  prep-build.sh  pyproject.toml
backend/workers/simulation-prosimos/: .env  Dockerfile  pyproject.toml  requirements.txt
services/files/: .env  Dockerfile  pyproject.toml  requirements.txt  test_requests.http
services/files/files/: app.py  settings.py
(+946 files in other folders)
