[tool.poetry]
name = "process-improvement-explorer"
version = "0.1.0"
description = ""
authors = ["Jonas Berx <jonas.berx@ut.ee>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
