[tool.poetry]
name = "process-improvement-explorer"
version = "0.1.0"
description = ""
authors = ["Jonas Berx <jonas.berx@ut.ee>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
psycopg2 = "^2.9.6"
sqlalchemy = "^1.4.48"
fastapi-sqlalchemy = "^0.2.1"
python-dotenv = "^1.0.0"
alembic = "^1.11.1"
pydantic = "^1.10.9"
python-multipart = "^0.0.6"
requests = "^2.31.0"
email-validator = "^2.0.0.post2"
openalchemy = "^2.5.0"
pyyaml = "^6.0"
aiofiles = "^23.1.0"
asyncio = "^3.4.3"
shortuuid = "^1.0.11"
jwt = "^1.3.1"
pyjwt = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
