[tool.poetry]
name = "pix-portal-lib"
version = "0.1.29"
description = ""
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]
readme = "README.md"
packages = [{ include = "pix_portal_lib" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
opentelemetry-distro = "^0.41b0"
opentelemetry-instrumentation-fastapi = "^0.41b0"
opentelemetry-instrumentation-httpx = "^0.41b0"
opentelemetry-instrumentation-requests = "^0.41b0"
opentelemetry-instrumentation-logging = "^0.41b0"
opentelemetry-exporter-otlp = "^1.20.0"
opentelemetry-exporter-prometheus = "^1.12.0rc1"
httpx = "^0.25.0"
requests = "^2.31.0"
kafka-python = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
